# 6.824

./: CMakeLists.txt
MapReduce/: CMakeLists.txt
MapReduce/src/: config.hpp.in  main.cpp  map_worker.cpp  master.cpp  reduce_worker.cpp  types.hpp
Raft/: CMakeLists.txt  raft.proto
Raft/src/: config.hpp.in  raft.cpp  raft.hpp  utils.hpp
Raft/tests/: CMakeLists.txt  client.cpp  raft_node.cpp
